docs: update roadmap and move Milestone 1 to completed
- Mark Milestone 1 (Bootstrap) as complete in docs/roadmap.md
- Move Milestone 1 details to context/completed/milestone-1-bootstrap.md
- Create new context/current-feature.md for Milestone 2 (Domain Model)
  - Sealed Reservation hierarchy with state records
  - InventoryItem and Tenant records
  - Domain events as immutable records
  - Comprehensive unit test suite for state transitions
Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>